--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "start:prod": "node dist/index.js",
     "dev": "ts-node src/index.ts"
   },
-  "keywords": ["tutor", "quiz", "education"],
+  "keywords": [
+    "tutor",
+    "quiz",
+    "education"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
@@ -42,7 +46,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.2",
-    "uuid": "^11.1.0",
+    "uuid": "^13.0.0",
     "winston": "^3.17.0"
   }
 }
